--- a/index.html
+++ b/index.html
@@ -1,15 +1,49 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="vi">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="prac.css">
+    <title id="title">?????</title>
+    <link rel="stylesheet" href="HB.css">
 </head>
 <body>
-    <div>
-        <p>Không có gì hết, chỉ là nút bấm xả chét</p>
-        <button>CLick Me</button>
+    <div class="menu-container">
+        <h1 id="h1-heading">?????</h1>
+        <input type="text" id="input-name" placeholder="Enter your full name"><br>
+        <button id="btn" title="click me!">OK</button>
     </div>
+
+    <h2 id="h2-heading" style="text-align: center; margin-top: 1px; font-size: 3rem; color: rgb(254, 212, 255);">HAPPY BIRTHDAY TO PHUONG ANH!!!</h2>
+ 
+    <div class="img-container">
+        <img id="anhtui-left" class="anhtui"  src="anhtui.png">
+        <img id="hb-img" src="https://media.tenor.com/Xvb2I-URKCcAAAAj/birthday-cake-birthday.gif">
+        <img id="anhtui-right" class="anhtui" title="DEEEEEEAA!!!" src="anhtui.png">
+    </div>
+
+    <div class="mess-container">
+        <button class="letter-button" id="letterIcon" aria-label="Mo thu">Click me!</button>
+
+        <div class="letter-panel" id="letterPanel">
+            <h3 style="font-family: 'Playball'; text-align: left;">Dear bạn <span style="font-family: 'Petemoss'; font-size: 50px; font-weight: bold; color: rgb(131, 224, 255);">Phương Anh</span> thân quíii</h3>
+            <p style="font-size: 40px; font-weight: bold; text-indent: 30px;">
+                Hihii, khum bít bạn mình nghĩ gì đầu tiên khi nhận được cái trang web này...nhưng mà lời đầu tiên, t xin chúc m sẽ có một tuổi đôi mươi thật khoắn khỏe và sán tỏa nhíee.
+                Hmm, đến h t vẫn chưa thể tưởng tượng được thời gian nó thấm thoát thoi đưa như thế nào, nhanh vl, t cứ tưởng là vẫn mấy ngày nào thôi í, mà h m với t cũng đã là năm 2 đại học ròi, vậy là chúng ta có anni 5 năm ròi deee! <span style="font-size: 30px;">(một chút cherished cho cái anni này hihi)</span>
+                À mà biết vì sao năm nay t lại chọn code web thay vì viết giấy kom? Kiểu t cũng đang học và cũng thích học web á nên năm nay t muốn làm gì đó đặc biệt hơn với khác với mọi năm, gọi là đổi gió xíu he. Mà làm cái này lâu lắm á và t cũng ko ngờ là nó lâu đến vậy do 1 phần là t chưa học hết nên phải 'vibe code' nhìu 🤡, sodi vì sự chậm trễ này ;)).
+                Anywayyy, như t đã nói ở phần đầu, 5 năm - 1 khoảng thời gian ko quá ngắn cũng ko quá dài, mà 5 năm ấy ảnh hưởng đến t rất nhiều. T cảm giác là m là người soi chiếu vào cuộc đời t í. T vẫn nhớ hồi mà t còn ngây dại hồi năm nhất, hihi. Hồi đó t biết gì đâu trời, có thể nói là t nhìn đời qua con mắt của 1 đứa trẻ con, ngây thơ, vô tư, gọi là có trí tuệ giản dị :)). T vẫn nhớ cái phòng thư viện hôm ấy, hình như là thứ 7 thì phải. T nhớ là m đã giải thích cho t, về những việc, những thứ mà t làm mà t còn ko nghĩ là nó đem lại ảnh hưởng xấu đến thế.
+                Lúc đó t kiểu khựng lại, đầu óc hỗn mang và nó cũng như cách mà t đối mặt với vấn đề ấy. Rồi nhiều lần như thế nữa, và t đã cố gắng thay đổi rất nhiều. Cảm ơn m nha hihi.<br>
+            </p>
+
+            <p style="font-size: 40px; font-weight: bold; text-indent: 30px;">    
+                T vẫn nhớ cái điều mà m nói trong lá thư sinh nhật t hehe, rằng là mọi thứ nó ko còn như trước nữa, và t thấy chút gì đó nuối tiếc và cũng hơi bùn thiệt. T hiểu rằng là mọi thứ theo thời gian thì khó mà vẹn nguyên y cũ lắm, nó sẽ phải thay đổi dù là bằng hình thức này hay hình thức khác, và quan trọng là mình có nhận ra nó, cách mình đón nhận và đối xử với nó thui 
+                (đoạn này tự nhiên t lại triết lí ghê cơ hehe)...và t tin rằng mọi thứ sẽ ổn, sẽ ổn theo cách riêng của nó. Nó ko cần ổn theo cách riêng trước đó mà chỉ cần ổn theo cách nó vận hành mà thui...he. Mà có điều t vẫn hơi thất vọng về mk, đó là dạo này chưa được đi chơi với m huhuhu, chắc phải lên kèo quá. T biết là ai cũng bận vl, nma t mún đi chơi thui, m thấy saooo =)).<br>
+                Z nha, t nói đến đây thui, chúc bạn mềnh tủi mới phải thật khoắn khỏe và sán tỏa đó nhé, năm con ngựa nên t chúc m chạy nhanh, chạy xa và bền bỉ nhóoo!!! Hết rùii, hẹn gặp m vào 1 ngày ko xa nhá *bắn tim*
+            </p>
+            <p style="text-align: right; font-size: 30px;">From ur fennnn</p>
+            <p style="text-align: right; font-weight: bold; font-size: 40px;">Hoàng Dương</p>
+        </div>
+    </div>
+
+    <script src="HB.js"></script>
 </body>
 </html>
